--- a/pages/cards.html
+++ b/pages/cards.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="Pt-br">
 <head>
@@ -11,24 +12,13 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Borel&family=Press+Start+2P&display=swap" rel="stylesheet">
     <title>Memory game</title>
-    <link rel="stylesheet" href="./Styles/newGame.css">
-    <script src="./scripts/newGame.js" defer></script>
+    <link rel="stylesheet" href="../Styles/cards.css">
+    <script src="./scripts/cards.js" defer></script>
 </head>
 <body>
    <div class="container">
-    <form class="newGameForm">
-        <header class="newGameHeader">
-            <img src="./images/logo-reprograma-jucas.png" alt="">
-            <h1>memory</h1>
-        </header>
-        <main>
-<input type="text" placeholder="Digite seu nome" class="inputName">
-        </main>
-        <footer>
-            <button type="submit" class="newGameButton" disabled>New game</button>
-            <button type="button" class="buttonRank">Rank</button>
-        </footer>
-    </form>
+   <h1>cards</h1>
+   <span class="playerName"></span>
    </div>
 </body>
 </html>
