add style page cards

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
             <h1>memory</h1>
         </header>
         <main>
-<input type="text" placeholder="Digite seu nome" class="inputName">
+<input type="text" placeholder="Digite seu nome" class="inputName" autofocus>
+<button type="submit" class="newGameButton" disabled>New game</button>
         </main>
         <footer>
-            <button type="submit" class="newGameButton" disabled>New game</button>
             <button type="button" class="buttonRank">Rank</button>
         </footer>
     </form>
