--- a/pages/cards.html
+++ b/pages/cards.html
@@ -1,24 +1,48 @@
-
 <!DOCTYPE html>
 <html lang="Pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Jogo da memoria com personagens de animes">
-    <meta name="Author" content="Luiza Angela">
-    <meta name="creator" content="Reprograma Jucás">
-    <link rel="Shotcut icon" href="./images/logo-rj.png" type="image/x-icon">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Borel&family=Press+Start+2P&display=swap" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Jogo da memoria com personagens de animes"
+    />
+    <meta name="Author" content="Luiza Angela" />
+    <meta name="creator" content="Reprograma Jucás" />
+    <link rel="Shotcut icon" href="./images/logo-rj.png" type="image/x-icon" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Borel&family=Press+Start+2P&display=swap"
+      rel="stylesheet"
+    />
     <title>Memory game</title>
-    <link rel="stylesheet" href="../Styles/cards.css">
+    <link rel="stylesheet" href="../Styles/cards.css" />
     <script src="./scripts/cards.js" defer></script>
-</head>
-<body>
-   <div class="container">
-   <h1>cards</h1>
-   <span class="playerName"></span>
-   </div>
-</body>
+  </head>
+  <body>
+    <div class="container">
+      <main>
+        <aside>
+          <button>&lt; sair</button>
+          <div class="dataPlayer">
+            <span class="playerName"></span>
+            <span class="timer">00:00</span>
+          </div>
+        </aside>
+        <div class="gridCards">
+            <div class="card " name="">
+                <div class="front">
+                    <img src="../images/card_1.jpg" alt="">
+                </div>
+                <div class="back">
+                    <img src="../images/yugioh-card-back.png" alt="">
+                </div>
+            </div>
+        </div>
+      </main>
+  
+      
+    </div>
+  </body>
 </html>
