update logic game win

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h1>memory</h1>
         </header>
         <main>
-<input type="text" placeholder="Digite seu nome" class="inputName" autofocus>
+<input type="text" placeholder="Digite seu nome" class="inputName" autofocus required maxlength="200">
 <button type="submit" class="newGameButton" disabled>New game</button>
         </main>
         <footer>
