--- a/pages/cards.html
+++ b/pages/cards.html
@@ -18,7 +18,7 @@
     />
     <title>Memory game</title>
     <link rel="stylesheet" href="../Styles/cards.css" />
-    <script src="./scripts/cards.js" defer></script>
+    <script src="../scripts/cards.js" defer></script>
   </head>
   <body>
     <div class="container">
