--- a/pages/rank.html
+++ b/pages/rank.html
@@ -9,7 +9,7 @@
     />
     <meta name="Author" content="Luiza Angela" />
     <meta name="creator" content="Reprograma Jucás" />
-    <link rel="Shotcut icon" href="./images/logo-rj.png" type="image/x-icon" />
+    <link rel="Shotcut icon" href="./images/logo-rj.png" type="..image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
