--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
    <div class="container">
     <form class="newGameForm">
         <header class="newGameHeader">
-            <img src="./images/logo-reprograma-jucas.png" alt="">
+          <a href="https://emanuelquintino.github.io/Page-WDC/" target="_blank">
+
+              <img src="./images/logo-reprograma-jucas.png" alt="">
+          </a>
             <h1>memory</h1>
         </header>
         <main>
